// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders checked 1`] = `
<div
  className="checkbox"
>
  <input
    checked={true}
    className="checkbox__input"
    id="sid-opt-in"
    name="sid-opt-in"
    onInput={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox__input-like"
  />
</div>
`;

exports[`<Checkbox /> renders with basic props 1`] = `
<div
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox__input"
    id="sid-opt-in"
    name="sid-opt-in"
    onInput={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox__input-like"
  />
</div>
`;
